# drpc

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README.md  autogen.sh  channel.hpp  configure.ac  drpc.hpp
builds/cmake/Modules/: DRPCSupportMacros.cmake  DRPCVersion.cmake
example/: example_client.cpp
interface/: dchat_api.yaml  dchat_data.yaml  sample_api.yaml  sample_data.yaml  thinking_future_api.yaml
src/: libdrpc.pc.in  version.rc.in
src/core/cpp/: Makefile.am
src/core/cpp/include/: drpc.hpp
src/core/cpp/src/: channel.cpp  channel.hpp  drpc.cpp  handler.cpp  handler.hpp  pack.hpp  router.cpp  router.hpp  worker.cpp  worker.hpp
template/cpp/: CMakeLists-txt.j2  am.j2  client.j2  client_if-cpp.j2  client_if-hpp.j2  data-hpp.j2  data.j2  data_orm-hpp.j2  package-pc.j2  server.j2  server_if-cpp.j2  server_if-hpp.j2
template/cpp/builds/cmake/Modules/: SupportMacros-cmake.j2  Version-cmake.j2
